--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 逍遥的小博客
+title: KAZUKI的小博客
 brief-intro: IT Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://xcracker.github.io" # the base hostname & protocol for your site
